--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "Skrifa",
 	"productName": "Skrifa",
-	"version": "0.2.4",
+	"version": "0.2.5",
 	"description": "A simple word processor built with web technologies",
 	"devDependencies": {
 		"electron": "^1.4.13",
@@ -13,7 +13,8 @@
 		"postinstall": "install-app-deps",
 		"start": "electron ./app --enable-logging",
 		"dev": "NODE_ENV='development' npm run start",
-		"dist": "build -mwl"
+		"dist": "build -mwl",
+		"mac": "build --m"
 	},
 	"author": "Diego Islas Ocampo <hyuchia@gmail.com>",
 	"license": "GPLv3",
