--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "html-boilerplate-pdf": "^5.0.0",
     "jquery": "^3.2.1",
+    "keyboardjs": "^2.3.3",
     "mammoth": "^1.3.4",
     "markdown-it": "^8.3.1",
     "mathjax": "^2.7.0",
