--- a/package.json
+++ b/package.json
@@ -1,42 +1,53 @@
 {
-	"name": "Skrifa",
-	"productName": "Skrifa",
-	"version": "0.2.6",
-	"description": "A simple word processor built with web technologies",
-	"devDependencies": {
-		"electron": "^1.6.2",
-		"electron-builder": "^16.7.1"
-	},
-	"scripts": {
-		"pack": "build --dir",
-		"dist": "build",
-		"postinstall": "install-app-deps",
-		"start": "electron ./app --enable-logging",
-		"dev": "NODE_ENV='development' npm run start",
-		"dist": "build -mwl",
-		"mac": "build --m",
-		"linux": "build --l"
-	},
-	"author": "Diego Islas Ocampo <hyuchia@gmail.com>",
-	"license": "GPL-3.0",
-	"build": {
-		"appId": "com.hyuchia.skrifa",
-		"mac": {
-			"category": "public.app-category.productivity",
-			"target": ["zip"]
-		},
-		"linux": {
-			"category": "Office",
-			"target": ["snap", "AppImage", "deb", "rpm", "freebsd", "pacman"],
-			"executableName": "Skrifa",
-			"synopsis": "A simple word processor built with web technologies"
-		},
-		"appx": {
-			"backgroundColor": "",
-			"publisher": "",
-			"displayName": "Skrifa",
-			"publisherDisplayName": "Hyuchia",
-			"identityName": ""
-		}
-	}
+  "name": "Skrifa",
+  "productName": "Skrifa",
+  "version": "0.2.6",
+  "description": "A simple word processor built with web technologies",
+  "devDependencies": {
+    "electron": "^1.6.2",
+    "electron-builder": "^16.7.1"
+  },
+  "scripts": {
+    "pack": "build --dir",
+    "dist": "build -mwl",
+    "postinstall": "install-app-deps",
+    "start": "electron ./app --enable-logging",
+    "dev": "NODE_ENV='development' npm run start",
+    "mac": "build --m",
+    "linux": "build --l"
+  },
+  "author": "Diego Islas Ocampo <hyuchia@gmail.com>",
+  "license": "GPL-3.0",
+  "build": {
+    "appId": "com.hyuchia.skrifa",
+    "mac": {
+      "category": "public.app-category.productivity",
+      "target": [
+        "zip"
+      ]
+    },
+    "linux": {
+      "category": "Office",
+      "target": [
+        "snap",
+        "AppImage",
+        "deb",
+        "rpm",
+        "freebsd",
+        "pacman"
+      ],
+      "executableName": "Skrifa",
+      "synopsis": "A simple word processor built with web technologies"
+    },
+    "appx": {
+      "backgroundColor": "",
+      "publisher": "",
+      "displayName": "Skrifa",
+      "publisherDisplayName": "Hyuchia",
+      "identityName": ""
+    }
+  },
+  "dependencies": {
+    "html-to-text": "^3.2.0"
+  }
 }
