--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "dexie": "^1.5.1",
     "font-awesome": "^4.7.0",
     "html-boilerplate-pdf": "^5.0.0",
+    "html-to-text": "^3.2.0",
     "jquery": "^3.2.1",
     "keyboardjs": "^2.3.3",
     "mammoth": "^1.3.4",
