--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
-dist
-node_modules
-npm-debug.log
 .DS_Store
-.thumbs
-.Thumbs
 *.zip
 *.rar
-._*
 *.skf
 *.skb
 *~
+._*
+.thumbs
+.Thumbs
+.buildconfig
+package-lock.json
+node_modules
+cache
+src
+build
+release
+dist
+package-lock.json
+.cache
+yarn.lock
+*.log
+.vscode
