--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Skrifa",
+  "name": "skrifa",
   "productName": "Skrifa",
   "version": "0.2.7",
   "description": "A simple word processor built with web technologies",
